Fix(html+css): wrap img's in ul&li / fixed the file paths / changed h5 to h2 in the footer

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,10 +23,12 @@ p {
   font-size: inherit;
 }
 
-ul {
+ul,
+li {
   margin: 0;
   padding: 0;
   list-style: none;
+  line-height: 0;
 }
 
 picture {
