--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 .page {
   color: var(--base-text-color);
-  font-family: 'IBM Plex mono', sans-serif;
+  font-family: 'IBM Plex mono', monospace;
   font-weight: 400;
   font-size: 18px;
   line-height: 130%;
@@ -149,6 +149,11 @@
   gap: 10px;
 }
 
+.gallery__list {
+  display: grid;
+  gap: 10px;
+}
+
 .container__title {
   color: var(--accent-color);
 }
@@ -190,7 +195,6 @@
   object-fit: cover;
   inline-size: 100%;
   block-size: 100%;
-  max-block-size: 100%;
 }
 
 .footer {
@@ -233,8 +237,10 @@
     gap: 20px;
   }
 
-  .container__section_gallery {
-    grid-template-rows: repeat(4, min-content);
+  .gallery__list {
+    grid-template-rows: repeat(3, min-content);
+    grid-column: span 3;
+    gap: 20px;
   }
 
   .container__section_gallery .title-decor {
@@ -253,29 +259,29 @@
     grid-column: span 2;
   }
 
-  .gallery-image:nth-child(2) {
+  .gallery__list-item:nth-child(1) {
     grid-column: 1 / 3;
-    grid-row: 2;
+    grid-row: 1;
   }
 
-  .gallery-image:nth-child(3) {
+  .gallery__list-item:nth-child(2) {
     grid-column: 3;
+    grid-row: 1 / 3;
+  }
+
+  .gallery__list-item:nth-child(3) {
+    grid-column: 1;
     grid-row: 2 / 4;
   }
 
-  .gallery-image:nth-child(4) {
-    grid-column: 1;
-    grid-row: 3 / 5;
-  }
-
-  .gallery-image:nth-child(5) {
+  .gallery__list-item:nth-child(4) {
     grid-column: 2;
-    grid-row: 3;
+    grid-row: 2;
   }
 
-  .gallery-image:nth-child(6) {
+  .gallery__list-item:nth-child(5) {
     grid-column: 2 / 4;
-    grid-row: 4;
+    grid-row: 3;
   }
 
   .footer__title {
